# freeagent-fin-ops

./: .editorconfig  .env.example  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .yamlfix.toml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  requirements.txt
.github/: README.md  copilot-instructions.md  pre-commit-matcher.json
.github/agents/: README.md
.github/instructions/: README.md  code-review.instructions.md
.github/prompts/: README.md  repository-setup.prompt.md.backup  sdk-scripts.prompt.md
.github/skills/: AGENTS.md  README.md
.github/skills/git/: SKILL.md
.github/skills/github-actions/: SKILL.md
.github/skills/pre-commit/: SKILL.md
.github/skills/skill-writer/: SKILL.md
.github/workflows/: README.md  check.yml  claude-review.yml  claude.yml  devcontainer-ci.yml
.tours/: README.md  getting-started.tour
docs/how-to/: check-transactions-by-nominal.md
scripts/: fa_cli.py
tests/: test_fa_cli.py
